[package]
name = "advm"
version = "0.1.0"
authors = ["Philipp Marmet <philipp.marmet@adfinis-sygroup.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
serde = { version = "1.0", features = ["derive"] }
serde_derive = "1.0"
